syntax = "proto3";

package phogolabs.cloud.gcp;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/phogolabs/cloud/gcp;gcp";

// Payload received by the service
message PubsubEvent {
  // The message that was published.
  PubsubMessage message = 1;
  // The resource name of the subscription for which this event was
  // generated. The format of the value is
  // `projects/{project-id}/subscriptions/{subscription-id}`.
  string subscription = 2;
}

// A message published to a topic.
// https://raw.githubusercontent.com/googleapis/google-cloudevents/42f72e07dfbe606e071338007a8a060eff1a7c8e/proto/google/events/cloud/pubsub/v1/data.proto
message PubsubMessage {
  // The binary data in the message.
  bytes data = 1;
  // Attributes for this message.
  map<string, string> attributes = 2;
  // ID of this message, assigned by the server when the message is published.
  // Guaranteed to be unique within the topic.
  string message_id = 3;
  // The time at which the message was published, populated by the server when
  // it receives the `Publish` call.
  google.protobuf.Timestamp publish_time = 4;
}
