syntax = "proto3";

package phogolabs.cloud.pubsub;

import "google/pubsub/v1/pubsub.proto";

option go_package = "github.com/phogolabs/cloud/pubsub;pubsub";

// ReceivedMessage and its corresponding acknowledgment ID.
message ReceivedMessage {
  // This ID can be used to acknowledge the received message.
  string ack_id = 1;

  // The message.
  google.pubsub.v1.PubsubMessage message = 2;

  // Delivery attempt counter is 1 + (the sum of number of NACKs and number of
  // ack_deadline exceeds) for this message.
  //
  // A NACK is any call to ModifyAckDeadline with a 0 deadline. An ack_deadline
  // exceeds event is whenever a message is not acknowledged within
  // ack_deadline. Note that ack_deadline is initially
  // Subscription.ackDeadlineSeconds, but may get extended automatically by
  // the client library.
  //
  // The first delivery of a given message will have this value as 1. The value
  // is calculated at best effort and is approximate.
  //
  // If a DeadLetterPolicy is not set on the subscription, this will be 0.
  // <b>EXPERIMENTAL:</b> This feature is part of a closed alpha release. This
  // API might be changed in backward-incompatible ways and is not recommended
  // for production use. It is not subject to any SLA or deprecation policy.
  int32 delivery_attempt = 3;

  // Required. The name of the subscription.
  // Format is `projects/{project}/subscriptions/{sub}`.
  string subscription = 4;
}
